# deltavision-os

./: .gitignore  README.md  SESSION_LOG.md  TESTS.md  config.py  main.py  pyproject.toml  safety.py
agent/: loop.py
benchmarks/: _osworld_partial_compare.py  _repro.py  ablation_result.json  ablation_sweep_result.json  backfill_runs.py  classifier_sensitivity.py  desktop_idle_observe.py  first_real_v2_run.json  osworld_cli_server.py  osworld_sonnet_task6_delta.json  osworld_sonnet_task6_full.json  osworld_test_small_deltavision_v1.json  osworld_test_small_deltavision_v2.json  osworld_windows_dv.db.snapshot  pipeline_perf.py  record_live_demo.py  render_demo_video.py  run_ablation_os.py  run_ablation_sweep.py  run_osworld.py  screenspot_eval.py  screenspot_qwen_full.json  screenspot_qwen_n90.json  screenspot_result_qwen2_5vl_7b.json  screenspot_sonnet_n30.json  screenspot_sonnet_n90.json  screenspot_summary.md  screenspot_uitars_llamacpp_full.json  screenspot_uitars_llamacpp_n30.json  screenspot_uitars_llamacpp_n90.json
capture/: __init__.py  base.py  os_native.py  osworld.py
deltavision_os/: __init__.py  main.py  safety.py
docs/: benchmarks.md  quickstart.md  troubleshooting.md
model/: __init__.py  _response_parser.py  base.py  claude.py  llamacpp.py  local.py  ollama.py  openai.py  scripted.py
observation/: __init__.py  builder.py  types.py
results/: __init__.py  save.py  store.py
tests/: test_a11y.py  test_actions.py  test_classifier.py  test_config.py  test_diff.py  test_naive_install.py  test_observation_builder.py  test_os_native_capture.py  test_phash.py  test_response_parser.py  (+5 more)
(+34 files in other folders)
